2005-04-24  Ozkan Sezer  <sezeroz@gmail.com>

	* 3dfx_device.c: Add Macronix MX86251 Voodoo Rush support.

2005-04-24  Ozkan Sezer  <sezeroz@gmail.com>

	* 3dfx_device.c (setmtrr_3dfx): Add missing break on default case.

2005-04-23  Guillem Jover  <guillem@hadrons.org>

	* 3dfx_device.c: Fix comment format. Remove obsolete compiler flags
	  info.

2005-04-23  Guillem Jover  <guillem@hadrons.org>

	* 3dfx_device.c: Move ChangeLog entries to ...
	* ChangeLog: ... here.

2004-05-05  Guillem Jover  <guillem@debian.org>

	* Use designators in fops_3dfx instead of the obsolete colon syntax.

2004-05-04  Guillem Jover  <guillem@debian.org>

	* Cleaned new kernel build system.
	* Indentation fixes. Normalized ChangeLog date format.

2004-02-13  Aristeu Sergio Rozanski Filho  <aris@cathedrallabs.org>

	* Use kernel build system.
	* Use new pci probe present in 2.6.x kernels.
	* Use module auto-loading.

2004-01-22   Guillem Jover   <guillem@debian.org>

	* Ported to 2.6 kernels.

2002-05-05   Guillem Jover   <guillem@hadrons.org>

	* Re-included VOODOO pci id, accidentally removed in last patch,
	  thanks to Jan Kuipers to point this out.

2002-01-29  Guillem Jover  <guillem@hadrons.org>

	* Fixed bug when compiling for 2.4 kernels with modversions.
	* Added devfs support.
	* Added MODULE_* declarations.
	* Cleaned detection code.

2000-02-04  Joseph Kain  <joseph@3dfx.com>

	* Updated Carlo Woord's email address.

1999-12-22  Joseph Kain  <joseph@3dfx.com>

	* Support for new VMA structure in Kernels 2.3.14 and higher.
	  This patch is based on Dieter Nuetzel's work.

1999-11-09  Joseph Kain  <joseph@3dfx.com>

	* Made cards static to remove conflict with hisax ISDN driver.

1998-10-30  Carlo Wood  <carlo@alinoe.com>

	* Re-included module versions (this source was based on the
	  source by Jon Taylor which was based on an older version
	  by Daryll Straus.  I now included the later changes made
	  by Daryll in this source too).